# corrosive_engine

./: Cargo.toml
corrosive_editor/: Cargo.toml
corrosive_editor/src/: main.rs
corrosive_editor/src/shaders/: shader.wgsl
corrosive_engine/: Cargo.toml
corrosive_engine/src/core/: application.rs  error.rs  geometry.rs  mod.rs  renderer.rs  texture.rs  window.rs
shaders/: fragment.glsl  vertex.glsl
src/: main.rs
src/engine/core/: application.rs  mod.rs  renderer.rs  window.rs
src/engine/shaders/: frag.glsl  vert.glsl
