[package]
name = "corrosive_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
nalgebra = "0.32.2"
wgpu = "0.16.0"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
# error-chain = "0.12.4"